<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/lblHeading"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/strHeading"
        android:textColor="#FFF"
        android:textSize="@dimen/font_size_label"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/lblStreet"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/strLblStreet"
        android:textColor="#FFF"
        android:textSize="15sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txtStreet"
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/rounded_edittext"
        android:inputType="text"
        android:paddingLeft="10dp"
        android:hint="@string/strTxtStreet"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/lblStreetErr"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:textColor="#F00"
        android:textSize="12sp"
        android:textStyle="bold"
        android:visibility="gone"
        android:text="This field is required" />

    <TextView
        android:id="@+id/lblCity"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/strLblCity"
        android:textColor="#FFF"
        android:textSize="15sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txtCity"
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/rounded_edittext"
        android:inputType="text"
        android:paddingLeft="10dp"
        android:hint="@string/strTxtCity"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/lblCityErr"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:textColor="#F00"
        android:textSize="12sp"
        android:textStyle="bold"
        android:visibility="gone"
		android:text="This field is required" />
    
    <TextView
        android:id="@+id/lblState"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/strLblState"
        android:textColor="#FFF"
        android:textSize="15sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spinnerState"
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/rounded_edittext"
        android:entries="@array/state_arrays"
        android:prompt="@string/state_prompt"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/lblStateErr"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:textColor="#F00"
        android:textSize="12sp"
        android:textStyle="bold"
        android:visibility="gone"
        android:text="This field is required" />
        
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="120dp"
            android:layout_height="35dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="15dp"
            android:background="#CCC"
            android:onClick="onSubmitClick"
            android:text="@string/strSubmit"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/idZillow"
            android:layout_width="fill_parent"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_vertical"
            android:layout_height="wrap_content"
            android:contentDescription="@string/zillowDesc"
            android:src="@drawable/zillowlogo" />
    </LinearLayout>
                <View
                android:id="@+id/line17"
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:background="#FFFFFF"
                android:layout_marginTop="5dip"
                android:layout_marginBottom="15dip"
                android:layout_marginLeft="15dip"
                android:layout_marginRight="15dip" />
                
                    <TextView
        android:id="@+id/lblNoResult"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:text="No exact match found--Verify that the given address is correct."
        android:textColor="#FFF"
        android:textSize="15sp"
        android:textStyle="bold"
        android:visibility="gone" />

</LinearLayout>