<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    
    <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <TextSwitcher
        android:id="@+id/textSwitcher1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        
         />

    <TextSwitcher
        android:id="@+id/textSwitcher2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" />

    <ImageSwitcher
        android:id="@+id/imageSwitcher"
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal" >


        <Button
            android:id="@+id/buttonPrev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="150dp"
            android:text="PREVIOUS" />

        <Button
            android:id="@+id/buttonNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="150dp"
            android:text="NEXT" />
    </LinearLayout>



</LinearLayout>
    <LinearLayout
        android:id="@+id/footer1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#ffffff"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/zillowFooter11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strzillowFooter1" />

        <TextView
            android:id="@+id/zillowFooter21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strzillowFooter2" />

        <TextView
            android:id="@+id/zillowFooter31"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strzillowFooter3" />
    </LinearLayout>
</RelativeLayout>